Bug 461764 - KDE Connect URL handler dialog has Wayland generic icon
Summary: KDE Connect URL handler dialog has Wayland generic icon
Status: RESOLVED FIXED
Alias: None
Product: kdeconnect
Classification: Applications
Component: common (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Albert Vaca Cintora
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-11-13 11:10 UTC by Patrick Silva
Modified: 2022-11-13 17:07 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (590.13 KB, image/png)
2022-11-13 11:10 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2022-11-13 11:10:40 UTC
Created attachment 153708 [details]
screenshot

STEPS TO REPRODUCE
1. use Wayland
2. go to https://vendasclaro.com.br/
3. click on the phone number 0800 306 2121

OBSERVED RESULT
KDE Connect URL handler dialog opens, it has a Wayland generic icon.
Please see the attached screenshot.

EXPECTED RESULT
KDE Connect icon instead of Wayland generic icon

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.26.80
KDE Frameworks Version: 5.100.0
Qt Version: 5.15.7
Graphics Platform: Wayland
Comment 1 Nicolas Fella 2022-11-13 17:05:09 UTC
Git commit 5fb7996d6a9067414c5a2d72c322cafd3fa15e30 by Nicolas Fella.
Committed on 13/11/2022 at 15:41.
Pushed by nicolasfella into branch 'master'.

[handler] Fix desktop file name

M  +1    -1    urlhandler/kdeconnect-handler.cpp

https://invent.kde.org/network/kdeconnect-kde/commit/5fb7996d6a9067414c5a2d72c322cafd3fa15e30
Comment 2 Nicolas Fella 2022-11-13 17:07:54 UTC
Git commit 04d9157718c3b5d54465f932b397b8ad5a0f2289 by Nicolas Fella.
Committed on 13/11/2022 at 17:06.
Pushed by nicolasfella into branch 'release/22.12'.

[handler] Fix desktop file name
(cherry picked from commit 5fb7996d6a9067414c5a2d72c322cafd3fa15e30)

M  +1    -1    urlhandler/kdeconnect-handler.cpp

https://invent.kde.org/network/kdeconnect-kde/commit/04d9157718c3b5d54465f932b397b8ad5a0f2289