[handler] Fix desktop file name

BUG: 461764
(cherry picked from commit 5fb7996d6a9067414c5a2d72c322cafd3fa15e30)