urlhandler/kdeconnect-handler.cpp
@@ -41,7 +41,7 @@ int main(int argc, char **argv)
     QApplication app(argc, argv);
     app.setWindowIcon(QIcon::fromTheme(QStringLiteral("kdeconnect")));
     const QString description = i18n("KDE Connect URL handler");
-    KAboutData about(QStringLiteral("kdeconnect-urlhandler"),
+    KAboutData about(QStringLiteral("kdeconnect.handler"),
                      description,
                      QStringLiteral(KDECONNECT_VERSION_STRING),
                      description,
